# POS-Sistemas-Embarcados

./: .gitignore
interrupcao_template_pico-w/: CMakeLists.txt  diagram.json  main.c  wokwi.toml
temp_nucleo/: CMakeLists.txt  main.c
termo_pico-w/: CMakeLists.txt  main.c  wokwi.toml
timer_template_pico-w/: CMakeLists.txt  diagram.json  main.c  wokwi.toml
